--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,8 +1,10 @@
 /* General styles */
+
+
 body {
   font-family: 'Open Sans', sans-serif;
-  background-color: #f7f7f7;
-  color: #333;
+  background-color: rgb(3, 97, 173);
+  color: #00b0bf;
 }
 
 h1,
@@ -12,13 +14,13 @@ h4,
 h5,
 h6 {
   font-family: 'Roboto', sans-serif;
-  color: #222;
+  color: rgb(0, 47, 128);
   margin-bottom: 1rem;
 }
 
 .small {
   font-weight: 300;
   font-style: italic;
-  color: #777;
+  color: rgb(3, 97, 173);
 }
 
